NLog: Add inner exceptions to logs

--- a/League/Configuration/NLog.Development.config
+++ b/League/Configuration/NLog.Development.config
@@ -18,7 +18,7 @@
 
       <!-- another file log, only own logs. -->
       <target xsi:type="File" name="ownFile-web" fileName="${var:logDirectory}logs\nlog-own-${shortdate}.log"
-              layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace}${newline}   |url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
+              layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace:maxInnerExceptionLevel=5:innerFormat=shortType,message,method}${newline}   |url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
 
       <!-- write to void i.e. just remove -->
       <target xsi:type="Null" name="nowhere" />
