Notification options added to configuration

--- a/League/Configuration/Tenant.Default.Production.config
+++ b/League/Configuration/Tenant.Default.Production.config
@@ -1,102 +1,170 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <TenantContext>
-    <Identifier>League</Identifier>
-    <Guid>BF2E2412-C610-4521-AE15-7BDA286E4480</Guid>
-    <IsDefault>true</IsDefault>
-    <SiteContext>
-        <!-- The value of the URL segment used to identify the organization. -->
-        <UrlSegmentValue></UrlSegmentValue>
-        <!-- FolderName must always be present -->
-        <FolderName></FolderName>
-        <IdentityCookieName>.League</IdentityCookieName>
-        <SessionName>.League</SessionName>
-        <HideInMenu>true</HideInMenu>
-        <Photos>
-            <TeamPhotoFolder>teamphoto</TeamPhotoFolder>
-            <PeoplePhotoFolder>personphoto</PeoplePhotoFolder>
-        </Photos>
-        <Email>
-            <ContactFrom>
-                <DisplayName>Volleyball-Liga</DisplayName>
-                <Address>league@volleyball-liga.de</Address>
-            </ContactFrom>
-            <ContactTo>
-                <DisplayName>Volleyball-Liga</DisplayName>
-                <Address>league@volleyball-liga.de</Address>
-            </ContactTo>
-            <GeneralFrom>
-                <DisplayName>Volleyball-Liga</DisplayName>
-                <Address>league@volleyball-liga.de</Address>
-            </GeneralFrom>
-            <GeneralTo>
-                <DisplayName>Volleyball-Liga</DisplayName>
-                <Address>league@volleyball-liga.de</Address>
-            </GeneralTo>
-            <GeneralBcc>
-                <DisplayName>Volleyball-Liga</DisplayName>
-                <Address>league@volleyball-liga.de</Address>
-            </GeneralBcc>
-        </Email>
-    </SiteContext>
-    <DbContext>
-        <ConnectionKey>leagueConnectionString</ConnectionKey>
-        <Catalog>a-indoor</Catalog>
-        <Schema>dbo</Schema>
-        <CommandTimeOut>15</CommandTimeOut>
-    </DbContext>
-    <OrganizationContext>
-        <Name>volleyball-liga.de</Name>
-        <ShortName>volleyball-liga.de</ShortName>
-        <Description></Description>
-        <HomepageUrl>https://volleyball-liga.de/</HomepageUrl>
-        <Bank>
-            <ShowBankDetailsInConfirmationEmail>true</ShowBankDetailsInConfirmationEmail>
-            <Recipient>axuno gemeinnuetzige GmbH - Testorganization Augsburg</Recipient>
-            <BankName>Fidor Bank AG</BankName>
-            <Bic>FDDODEMMXXX</Bic>
-            <Iban>DE61 700 222 000 020 137 800</Iban>
-            <Amount>0.00</Amount>
-            <Currency>EUR</Currency>
-        </Bank>
-    </OrganizationContext>
-    <TournamentContext>
-        <ApplicationTournamentId>0</ApplicationTournamentId>
-        <ApplicationAllowed>true</ApplicationAllowed>
-        <ApplicationDeadline>2021-01-01T00:00:00</ApplicationDeadline>
-        <MapTournamentId>0</MapTournamentId>
-        <!-- if a team is registered for ApplicationTournamentId this is used for editing the team -->
-        <TeamTournamentId>0</TeamTournamentId>
-        <MatchPlanTournamentId>0</MatchPlanTournamentId>
-        <MatchResultTournamentId>0</MatchResultTournamentId>
-        <FixtureRuleSet>
-            <RegularMatchStartTime>
-                <MinDayTime>18:00:00</MinDayTime>
-                <MaxDayTime>21:00:00</MaxDayTime>
-            </RegularMatchStartTime>
-            <PlannedDurationOfMatch>00:02:00:00</PlannedDurationOfMatch>
-            <PlannedMatchDateTimeMustBeSet>true</PlannedMatchDateTimeMustBeSet>
-            <CheckForExcludedMatchDateTime>true</CheckForExcludedMatchDateTime>
-            <PlannedVenueMustBeSet>true</PlannedVenueMustBeSet>
-            <PlannedMatchTimeMustStayInCurrentLegBoundaries>false</PlannedMatchTimeMustStayInCurrentLegBoundaries>
-            <UseOnlyDatePartForTeamFreeBusyTimes>true</UseOnlyDatePartForTeamFreeBusyTimes>
-        </FixtureRuleSet>
-        <!-- max. number of days or a negative value (-1) for 'unlimited' -->
-        <MaxDaysForResultCorrection>-1</MaxDaysForResultCorrection>
-        <TeamRuleSet>
-            <HomeMatchTime>
-                <IsEditable>True</IsEditable>
-                <MustBeSet>True</MustBeSet>
-                <DaysOfWeekRange>
-                    <DayOfWeek>Monday</DayOfWeek>
-                    <DayOfWeek>Tuesday</DayOfWeek>
-                    <DayOfWeek>Wednesday</DayOfWeek>
-                    <DayOfWeek>Thursday</DayOfWeek>
-                    <DayOfWeek>Friday</DayOfWeek>
-                    <DayOfWeek>Saturday</DayOfWeek>
-                    <DayOfWeek>Sunday</DayOfWeek>
-                </DaysOfWeekRange>
-                <ErrorIfNotInDaysOfWeekRange>False</ErrorIfNotInDaysOfWeekRange>
-            </HomeMatchTime>
-        </TeamRuleSet>
-    </TournamentContext>
+  <!-- Identifies the tenant. Value is also used for tenant-specific file names. -->
+  <Identifier>League</Identifier>
+  <!-- The tenant GUID. -->
+  <Guid>bf2e2412-c610-4521-ae15-7bda286e4480</Guid>
+  <!-- May only be true for a single tenant in a tenant store. -->
+  <IsDefault>True</IsDefault>
+  <SiteContext>
+    <!-- The Url segment used to identify the site. May be empty for the default tenant. -->
+    <UrlSegmentValue></UrlSegmentValue>
+    <!-- The folder name used for a tenant. This name must be set. -->
+    <FolderName></FolderName>
+    <!-- The cookie name used Asp.Net Identity. -->
+    <IdentityCookieName>.League</IdentityCookieName>
+    <!-- The session name used for the tenant. -->
+    <SessionName>.League</SessionName>
+    <!-- If true, the site will not be shown in the navigation menu. -->
+    <HideInMenu>True</HideInMenu>
+    <!-- Location for photos. -->
+    <Photos>
+      <!-- The folder for team photos. -->
+      <TeamPhotoFolder>teamphoto</TeamPhotoFolder>
+      <!-- The folder for photos of people. -->
+      <PeoplePhotoFolder>personphoto</PeoplePhotoFolder>
+    </Photos>
+    <!-- Email contact details. -->
+    <Email>
+      <ContactFrom>
+        <!-- The display name of a recipient. -->
+        <DisplayName>Volleyball-Liga</DisplayName>
+        <!-- The email address of a recipient. -->
+        <Address>league@volleyball-liga.de</Address>
+      </ContactFrom>
+      <!-- "From" mailbox address for the contact form -->
+      <ContactTo>
+        <!-- The display name of a recipient. -->
+        <DisplayName>Volleyball-Liga</DisplayName>
+        <!-- The email address of a recipient. -->
+        <Address>league@volleyball-liga.de</Address>
+      </ContactTo>
+      <!-- General "To" mailbox address for emails generated programmatically -->
+      <GeneralTo>
+        <!-- The display name of a recipient. -->
+        <DisplayName>Volleyball-Liga</DisplayName>
+        <!-- The email address of a recipient. -->
+        <Address>league@volleyball-liga.de</Address>
+      </GeneralTo>
+      <!-- General "From" mailbox address for emails generated programmatically -->
+      <GeneralFrom>
+        <!-- The display name of a recipient. -->
+        <DisplayName>Volleyball-Liga</DisplayName>
+        <!-- The email address of a recipient. -->
+        <Address>league@volleyball-liga.de</Address>
+      </GeneralFrom>
+      <!-- General "BCC" mailbox address for emails generated programmatically -->
+      <GeneralBcc>
+        <!-- The display name of a recipient. -->
+        <DisplayName>Volleyball-Liga</DisplayName>
+        <!-- The email address of a recipient. -->
+        <Address>league@volleyball-liga.de</Address>
+      </GeneralBcc>
+    </Email>
+    <!-- Notifications sent before and after matches. -->
+    <MatchNotifications>
+      <!-- Number of days before the next match will be announced. 0 for none, negative number days. -->
+      <DaysBeforeNextmatch>-10</DaysBeforeNextmatch>
+      <!-- Number of days to remind 1st time for missing match results. 0 for none, positive number of days. -->
+      <DaysForMatchResultReminder1>3</DaysForMatchResultReminder1>
+      <!-- Number of days to remind 2nd time for missing match results. 0 for none, positive number of days. -->
+      <DaysForMatchResultReminder2>10</DaysForMatchResultReminder2>
+    </MatchNotifications>
+  </SiteContext>
+  <OrganizationContext>
+    <!-- The full name of the organization. -->
+    <Name>volleyball-liga.de</Name>
+    <!-- The short version of the organization's name. -->
+    <ShortName>volleyball-liga.de</ShortName>
+    <Description></Description>
+    <!-- The homepage for the organization (NOT the league website). -->
+    <HomepageUrl>https://volleyball-liga.de/</HomepageUrl>
+    <Bank>
+      <!-- If true, bank details are part of the confirmation email when registering a team. -->
+      <ShowBankDetailsInConfirmationEmail>True</ShowBankDetailsInConfirmationEmail>
+      <!-- The name of the payment recipient, usually the organization name. -->
+      <Recipient>axuno gemeinnuetzige GmbH - Testorganization Augsburg</Recipient>
+      <!-- The name of the bank where a payment is directed. -->
+      <BankName>Fidor Bank AG</BankName>
+      <!-- The BIC number of the bank account. -->
+      <Bic>FDDODEMMXXX</Bic>
+      <!-- The IBAN number of the bank. -->
+      <Iban>DE61 700 222 000 020 137 800</Iban>
+      <!-- The participation fee, may be zero. -->
+      <Amount>0.00</Amount>
+      <!-- The currency for the participation fee. -->
+      <Currency>EUR</Currency>
+    </Bank>
+  </OrganizationContext>
+  <DbContext>
+    <!-- The connection key used to retrieve the ConnectionString -->
+    <ConnectionKey>leagueConnectionString</ConnectionKey>
+    <!-- The catalog aka database name -->
+    <Catalog>a-indoor</Catalog>
+    <!-- The schema inside the database -->
+    <Schema>dbo</Schema>
+    <!-- The timeout value to use with database commands -->
+    <CommandTimeOut>15</CommandTimeOut>
+  </DbContext>
+  <TournamentContext>
+    <!-- The ID of the tournament which will be used for new teams' applications -->
+    <ApplicationTournamentId>0</ApplicationTournamentId>
+    <!-- True, if teams' applications are allowed, otherwise false -->
+    <ApplicationAllowed>True</ApplicationAllowed>
+    <!-- The deadline for new teams' applications -->
+    <ApplicationDeadline>01/01/2021 00:00:00</ApplicationDeadline>
+    <!-- The ID of the tournament which will be used for to display maps -->
+    <MapTournamentId>0</MapTournamentId>
+    <!-- The ID of the tournament which will be used to display team data -->
+    <TeamTournamentId>0</TeamTournamentId>
+    <!-- The ID of the tournament which will be used to display the match plan -->
+    <MatchPlanTournamentId>0</MatchPlanTournamentId>
+    <!-- The ID of the tournament which will be used to display match results and tables -->
+    <MatchResultTournamentId>0</MatchResultTournamentId>
+    <!-- The rules which apply for creating and editing fixtures -->
+    <FixtureRuleSet>
+      <!-- The time when matches start and end normally (e.g. from 18:00 - 21:00 h) -->
+      <RegularMatchStartTime>
+        <!-- Earliest start time for a match -->
+        <MinDayTime>18:00:00</MinDayTime>
+        <!-- Latest start time for a match -->
+        <MaxDayTime>21:00:00</MaxDayTime>
+      </RegularMatchStartTime>
+      <!-- The duration which is used to generate fixtures and to determine periods where a venue is occupied -->
+      <PlannedDurationOfMatch>02:00:00</PlannedDurationOfMatch>
+      <!-- If set to true, when editing a fixture the match time must be set -->
+      <PlannedMatchDateTimeMustBeSet>True</PlannedMatchDateTimeMustBeSet>
+      <!-- If set to true, the planned match time must no include any dates found in ExcludeMatchDate table entries -->
+      <CheckForExcludedMatchDateTime>True</CheckForExcludedMatchDateTime>
+      <!-- If set to true, the planned match time must stay within the current leg date boundaries. If false, the planned time must stay with in any leg date boundaries. -->
+      <PlannedMatchTimeMustStayInCurrentLegBoundaries>False</PlannedMatchTimeMustStayInCurrentLegBoundaries>
+      <!-- If set to true, when editing a fixture the venue must be set -->
+      <PlannedVenueMustBeSet>True</PlannedVenueMustBeSet>
+      <!-- If true, when checking whether teams already have a match at a certain moment, only the date will be used (i.e. only 1 match per calendar date) -->
+      <UseOnlyDatePartForTeamFreeBusyTimes>True</UseOnlyDatePartForTeamFreeBusyTimes>
+    </FixtureRuleSet>
+    <!-- The max. number of days after RealStart where results may be changed. Negative value means 'unlimited' -->
+    <MaxDaysForResultCorrection>-1</MaxDaysForResultCorrection>
+    <!-- The rules which apply for creating and editing team data -->
+    <TeamRuleSet>
+      <HomeMatchTime>
+        <!-- If true, HomeMatchTime will be shown on team forms. If false, IsEditable, DaysOfWeekRange and ErrorIfNotInDaysOfWeekRange are irrelevant. -->
+        <IsEditable>True</IsEditable>
+        <!-- If true, the HomeMatchTime must be set, i.e. cannot be null/unspecified -->
+        <MustBeSet>True</MustBeSet>
+        <!-- Allowed days of a week -->
+        <DaysOfWeekRange>
+          <DayOfWeek>Monday</DayOfWeek>
+          <DayOfWeek>Tuesday</DayOfWeek>
+          <DayOfWeek>Wednesday</DayOfWeek>
+          <DayOfWeek>Thursday</DayOfWeek>
+          <DayOfWeek>Friday</DayOfWeek>
+          <DayOfWeek>Saturday</DayOfWeek>
+          <DayOfWeek>Sunday</DayOfWeek>
+        </DaysOfWeekRange>
+        <!-- If true, entries not in 'DaysOfWeekRange' are errors (else: warning) -->
+        <ErrorIfNotInDaysOfWeekRange>False</ErrorIfNotInDaysOfWeekRange>
+      </HomeMatchTime>
+    </TeamRuleSet>
+  </TournamentContext>
 </TenantContext>
