--- a/League/League.csproj
+++ b/League/League.csproj
@@ -6,8 +6,8 @@
 		<RootNamespace>League</RootNamespace>
 		<UserSecretsId>ceea2bf6-8147-49b9-be85-26fca01f9ed3</UserSecretsId>
 		<NeutralLanguage></NeutralLanguage>
-		<Version>4.4.0</Version>
-        <AssemblyVersion>4.4.0.0</AssemblyVersion>
+		<Version>4.5.0</Version>
+        <AssemblyVersion>4.5.0.0</AssemblyVersion>
 		<PackageId>Volleyball-League</PackageId>
 		<Authors>axuno gGmbH</Authors>
 		<Product>Volleyball-League</Product>
@@ -18,6 +18,8 @@
 		<RepositoryUrl>https://github.com/axuno/Volleyball-League</RepositoryUrl>
 		<PackageTags>volleyball league competition asp.net-core</PackageTags>
 		<PackageReleaseNotes>Production release for platform https://volleyball-liga.de/</PackageReleaseNotes>
+        <IsPackable>false</IsPackable>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<ItemGroup>
