--- a/LeagueDemo/Configuration/Tenant.Default.Development.config
+++ b/LeagueDemo/Configuration/Tenant.Default.Development.config
@@ -1,22 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <TenantContext>
   <!-- Identifies the tenant. Value is also used for tenant-specific file names. -->
-  <Identifier>OtherOrg</Identifier>
+  <Identifier>League</Identifier>
   <!-- The tenant GUID. -->
-  <Guid>bf2e2412-c610-4521-ae13-7bda286e4480</Guid>
+  <Guid>bf2e2412-c610-4521-ae15-7bda286e4480</Guid>
   <!-- May only be true for a single tenant in a tenant store. -->
-  <IsDefault>False</IsDefault>
+  <IsDefault>True</IsDefault>
   <SiteContext>
     <!-- The Url segment used to identify the site. May be empty for the default tenant. -->
-    <UrlSegmentValue>otherorg</UrlSegmentValue>
+    <UrlSegmentValue></UrlSegmentValue>
     <!-- The folder name used for a tenant. This name must be set. -->
-    <FolderName>otherorg</FolderName>
+    <FolderName></FolderName>
     <!-- The cookie name used Asp.Net Identity. -->
-    <IdentityCookieName>.LeagueOther</IdentityCookieName>
+    <IdentityCookieName>.League</IdentityCookieName>
     <!-- The session name used for the tenant. -->
-    <SessionName>.LeagueOther</SessionName>
+    <SessionName>.League</SessionName>
     <!-- If true, the site will not be shown in the navigation menu. -->
-    <HideInMenu>False</HideInMenu>
+    <HideInMenu>True</HideInMenu>
     <!-- Location for photos. -->
     <Photos>
       <!-- The folder for team photos. -->
@@ -28,37 +28,37 @@
     <Email>
       <ContactFrom>
         <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization Augsburg</DisplayName>
+        <DisplayName>Volleyball-Liga</DisplayName>
         <!-- The email address of a recipient. -->
-        <Address>testorg@volleyball-liga.de</Address>
+        <Address>league@volleyball-liga.de</Address>
       </ContactFrom>
       <!-- "From" mailbox address for the contact form -->
       <ContactTo>
         <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization Augsburg</DisplayName>
+        <DisplayName>Volleyball-Liga</DisplayName>
         <!-- The email address of a recipient. -->
-        <Address>testorg@volleyball-liga.de</Address>
+        <Address>league@volleyball-liga.de</Address>
       </ContactTo>
       <!-- General "To" mailbox address for emails generated programmatically -->
       <GeneralTo>
         <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization Augsburg</DisplayName>
+        <DisplayName>Volleyball-Liga</DisplayName>
         <!-- The email address of a recipient. -->
-        <Address>testorg@volleyball-liga.de</Address>
+        <Address>league@volleyball-liga.de</Address>
       </GeneralTo>
       <!-- General "From" mailbox address for emails generated programmatically -->
       <GeneralFrom>
         <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization Augsburg</DisplayName>
+        <DisplayName>Volleyball-Liga</DisplayName>
         <!-- The email address of a recipient. -->
-        <Address>testorg@volleyball-liga.de</Address>
+        <Address>league@volleyball-liga.de</Address>
       </GeneralFrom>
       <!-- General "BCC" mailbox address for emails generated programmatically -->
       <GeneralBcc>
         <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization Augsburg</DisplayName>
+        <DisplayName>Volleyball-Liga</DisplayName>
         <!-- The email address of a recipient. -->
-        <Address>testorg@volleyball-liga.de</Address>
+        <Address>league@volleyball-liga.de</Address>
       </GeneralBcc>
     </Email>
     <!-- Notifications sent before and after matches. -->
@@ -73,17 +73,17 @@
   </SiteContext>
   <OrganizationContext>
     <!-- The full name of the organization. -->
-    <Name>Volleyball Other League</Name>
+    <Name>volleyball-liga.de</Name>
     <!-- The short version of the organization's name. -->
-    <ShortName>Other League</ShortName>
-    <Description>Other League für Testzwecke</Description>
+    <ShortName>volleyball-liga.de</ShortName>
+    <Description></Description>
     <!-- The homepage for the organization (NOT the league website). -->
-    <HomepageUrl>https://volleyball-liga.de/otherorg</HomepageUrl>
+    <HomepageUrl>https://volleyball-liga.de/</HomepageUrl>
     <Bank>
       <!-- If true, bank details are part of the confirmation email when registering a team. -->
       <ShowBankDetailsInConfirmationEmail>True</ShowBankDetailsInConfirmationEmail>
       <!-- The name of the payment recipient, usually the organization name. -->
-      <Recipient>axuno gemeinnuetzige GmbH - Otherorganization Augsburg</Recipient>
+      <Recipient>axuno gemeinnuetzige GmbH - Testorganization Augsburg</Recipient>
       <!-- The name of the bank where a payment is directed. -->
       <BankName>Fidor Bank AG</BankName>
       <!-- The BIC number of the bank account. -->
@@ -91,16 +91,16 @@
       <!-- The IBAN number of the bank. -->
       <Iban>DE61 700 222 000 020 137 800</Iban>
       <!-- The participation fee, may be zero. -->
-      <Amount>19.00</Amount>
+      <Amount>0.00</Amount>
       <!-- The currency for the participation fee. -->
       <Currency>EUR</Currency>
     </Bank>
   </OrganizationContext>
   <DbContext>
     <!-- The connection key used to retrieve the ConnectionString -->
-    <ConnectionKey>OtherOrgConnectionString</ConnectionKey>
+    <ConnectionKey>AIndoorConnectionString</ConnectionKey>
     <!-- The catalog aka database name -->
-    <Catalog>TestOrg</Catalog>
+    <Catalog>a-indoor</Catalog>
     <!-- The schema inside the database -->
     <Schema>dbo</Schema>
     <!-- The timeout value to use with database commands -->
@@ -108,19 +108,19 @@
   </DbContext>
   <TournamentContext>
     <!-- The ID of the tournament which will be used for new teams' applications -->
-    <ApplicationTournamentId>2</ApplicationTournamentId>
+    <ApplicationTournamentId>0</ApplicationTournamentId>
     <!-- True, if teams' applications are allowed, otherwise false -->
-    <ApplicationAllowed>False</ApplicationAllowed>
+    <ApplicationAllowed>True</ApplicationAllowed>
     <!-- The deadline for new teams' applications -->
-    <ApplicationDeadline>04/05/2018 00:00:00</ApplicationDeadline>
+    <ApplicationDeadline>01/01/2021 00:00:00</ApplicationDeadline>
     <!-- The ID of the tournament which will be used for to display maps -->
-    <MapTournamentId>2</MapTournamentId>
+    <MapTournamentId>0</MapTournamentId>
     <!-- The ID of the tournament which will be used to display team data -->
-    <TeamTournamentId>2</TeamTournamentId>
+    <TeamTournamentId>0</TeamTournamentId>
     <!-- The ID of the tournament which will be used to display the match plan -->
-    <MatchPlanTournamentId>2</MatchPlanTournamentId>
+    <MatchPlanTournamentId>0</MatchPlanTournamentId>
     <!-- The ID of the tournament which will be used to display match results and tables -->
-    <MatchResultTournamentId>2</MatchResultTournamentId>
+    <MatchResultTournamentId>0</MatchResultTournamentId>
     <!-- The rules which apply for creating and editing fixtures -->
     <FixtureRuleSet>
       <!-- The time when matches start and end normally (e.g. from 18:00 - 21:00 h) -->
