--- a/Axuno.BackgroundTask/Axuno.BackgroundTask.csproj
+++ b/Axuno.BackgroundTask/Axuno.BackgroundTask.csproj
@@ -13,6 +13,10 @@
   <ItemGroup>
 	<PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.5" />
 	<PackageReference Include="Cronos" Version="0.7.0" />
+	<PackageReference Include="NuGetizer" Version="0.6.0">
+	  <PrivateAssets>all</PrivateAssets>
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
   </ItemGroup>
 
 </Project>
