--- a/LeagueDemo/Configuration/Tenant.TestOrg.Development.config
+++ b/LeagueDemo/Configuration/Tenant.TestOrg.Development.config
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <TenantContext>
   <!-- Identifies the tenant. Value is also used for tenant-specific file names. -->
-  <Identifier>OtherOrg</Identifier>
+  <Identifier>TestOrg</Identifier>
   <!-- The tenant GUID. -->
-  <Guid>bf2e2412-c610-4521-ae13-7bda286e4480</Guid>
+  <Guid>bf2e2412-c610-4521-ae12-7bda286e4480</Guid>
   <!-- May only be true for a single tenant in a tenant store. -->
   <IsDefault>False</IsDefault>
   <SiteContext>
     <!-- The Url segment used to identify the site. May be empty for the default tenant. -->
-    <UrlSegmentValue>otherorg</UrlSegmentValue>
+    <UrlSegmentValue>testorg</UrlSegmentValue>
     <!-- The folder name used for a tenant. This name must be set. -->
-    <FolderName>otherorg</FolderName>
+    <FolderName>testorg</FolderName>
     <!-- The cookie name used Asp.Net Identity. -->
-    <IdentityCookieName>.LeagueOther</IdentityCookieName>
+    <IdentityCookieName>.LeagueTest</IdentityCookieName>
     <!-- The session name used for the tenant. -->
-    <SessionName>.LeagueOther</SessionName>
+    <SessionName>.LeagueTest</SessionName>
     <!-- If true, the site will not be shown in the navigation menu. -->
     <HideInMenu>False</HideInMenu>
     <!-- Location for photos. -->
@@ -28,35 +28,35 @@
     <Email>
       <ContactFrom>
         <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization Augsburg</DisplayName>
+        <DisplayName>Testorganization Augsburg</DisplayName>
         <!-- The email address of a recipient. -->
         <Address>testorg@volleyball-liga.de</Address>
       </ContactFrom>
       <!-- "From" mailbox address for the contact form -->
       <ContactTo>
         <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization Augsburg</DisplayName>
+        <DisplayName>Testorganization Augsburg</DisplayName>
         <!-- The email address of a recipient. -->
         <Address>testorg@volleyball-liga.de</Address>
       </ContactTo>
       <!-- General "To" mailbox address for emails generated programmatically -->
       <GeneralTo>
         <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization Augsburg</DisplayName>
+        <DisplayName>Testorganization Augsburg</DisplayName>
         <!-- The email address of a recipient. -->
         <Address>testorg@volleyball-liga.de</Address>
       </GeneralTo>
       <!-- General "From" mailbox address for emails generated programmatically -->
       <GeneralFrom>
         <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization Augsburg</DisplayName>
+        <DisplayName>Testorganization Augsburg</DisplayName>
         <!-- The email address of a recipient. -->
         <Address>testorg@volleyball-liga.de</Address>
       </GeneralFrom>
       <!-- General "BCC" mailbox address for emails generated programmatically -->
       <GeneralBcc>
         <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization Augsburg</DisplayName>
+        <DisplayName>Testorganization Augsburg</DisplayName>
         <!-- The email address of a recipient. -->
         <Address>testorg@volleyball-liga.de</Address>
       </GeneralBcc>
@@ -73,17 +73,17 @@
   </SiteContext>
   <OrganizationContext>
     <!-- The full name of the organization. -->
-    <Name>Volleyball Other League</Name>
+    <Name>Volleyball Test League</Name>
     <!-- The short version of the organization's name. -->
-    <ShortName>Other League</ShortName>
-    <Description>Other League für Testzwecke</Description>
+    <ShortName>Test League</ShortName>
+    <Description>Liga für Testzwecke</Description>
     <!-- The homepage for the organization (NOT the league website). -->
-    <HomepageUrl>https://volleyball-liga.de/otherorg</HomepageUrl>
+    <HomepageUrl>https://volleyball-liga.de/testorg</HomepageUrl>
     <Bank>
       <!-- If true, bank details are part of the confirmation email when registering a team. -->
       <ShowBankDetailsInConfirmationEmail>True</ShowBankDetailsInConfirmationEmail>
       <!-- The name of the payment recipient, usually the organization name. -->
-      <Recipient>axuno gemeinnuetzige GmbH - Otherorganization Augsburg</Recipient>
+      <Recipient>axuno gemeinnuetzige GmbH - Testorganization Augsburg</Recipient>
       <!-- The name of the bank where a payment is directed. -->
       <BankName>Fidor Bank AG</BankName>
       <!-- The BIC number of the bank account. -->
@@ -98,7 +98,7 @@
   </OrganizationContext>
   <DbContext>
     <!-- The connection key used to retrieve the ConnectionString -->
-    <ConnectionKey>OtherOrgConnectionString</ConnectionKey>
+    <ConnectionKey>TestOrgConnectionString</ConnectionKey>
     <!-- The catalog aka database name -->
     <Catalog>TestOrg</Catalog>
     <!-- The schema inside the database -->
@@ -108,11 +108,11 @@
   </DbContext>
   <TournamentContext>
     <!-- The ID of the tournament which will be used for new teams' applications -->
-    <ApplicationTournamentId>2</ApplicationTournamentId>
+    <ApplicationTournamentId>3</ApplicationTournamentId>
     <!-- True, if teams' applications are allowed, otherwise false -->
-    <ApplicationAllowed>False</ApplicationAllowed>
+    <ApplicationAllowed>True</ApplicationAllowed>
     <!-- The deadline for new teams' applications -->
-    <ApplicationDeadline>04/05/2018 00:00:00</ApplicationDeadline>
+    <ApplicationDeadline>04/05/2020 00:00:00</ApplicationDeadline>
     <!-- The ID of the tournament which will be used for to display maps -->
     <MapTournamentId>2</MapTournamentId>
     <!-- The ID of the tournament which will be used to display team data -->
