--- a/TournamentManager/DAL/DatabaseSpecific/TournamentManager.DAL.DBSpecific.csproj
+++ b/TournamentManager/DAL/DatabaseSpecific/TournamentManager.DAL.DBSpecific.csproj
@@ -6,6 +6,10 @@
     <RootNamespace>TournamentManager.DAL.DatabaseSpecific</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="NuGetizer" Version="0.6.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.7.0" />
   </ItemGroup>
 </Project>
