Separated RCL and LeagueDemo

--- a/League/Configuration/AppSettings.json
+++ b/League/Configuration/AppSettings.json
@@ -7,17 +7,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "DomainName": "volleyball-liga.de",
+  "DomainName": "league.default",
   "CultureInfo": {
-    "Culture": "de",
-    "UiCulture": "de",
+    "Culture": "en",
+    "UiCulture": "en",
     "CulturePerRequest": true
   },
   "RegionInfo": "de",
   "TimeZone": "Europe/Berlin",
-  "NavigationOptions": {
-    "NavigationMapXmlFileName": "Configuration/Navigation.config"
-  },
   "IdentityOptions": {
     "SignIn": {
       "RequireConfirmedEmail": true,
