--- a/LeagueDemo/Configuration/Tenant.Default.Production.config
+++ b/LeagueDemo/Configuration/Tenant.Default.Production.config
@@ -17,13 +17,6 @@
     <SessionName>.League</SessionName>
     <!-- If true, the site will not be shown in the navigation menu. -->
     <HideInMenu>True</HideInMenu>
-    <!-- Location for photos. -->
-    <Photos>
-      <!-- The folder for team photos. -->
-      <TeamPhotoFolder>teamphoto</TeamPhotoFolder>
-      <!-- The folder for photos of people. -->
-      <PeoplePhotoFolder>personphoto</PeoplePhotoFolder>
-    </Photos>
     <!-- Email contact details. -->
     <Email>
       <ContactFrom>
@@ -98,7 +91,7 @@
   </OrganizationContext>
   <DbContext>
     <!-- The connection key used to retrieve the ConnectionString -->
-    <ConnectionKey>leagueConnectionString</ConnectionKey>
+    <ConnectionKey>LeagueConnectionString</ConnectionKey>
     <!-- The catalog aka database name -->
     <Catalog>a-indoor</Catalog>
     <!-- The schema inside the database -->
