Moved individual Pages/Controllers from League RCL to Demo

--- a/League/League.csproj
+++ b/League/League.csproj
@@ -218,6 +218,7 @@
 
 	<ItemGroup>
 	  <Folder Include="logs\" />
+	  <Folder Include="wwwroot\images\" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Debug'">
